src/domain/registrations/registrationList/registrationList.module.scss
.contentWrapperTable {
  background-color: var(--color-white);
  margin-top: var(--spacing-2-xl);
}

.tableWrapper {
  margin-top: calc(0px - var(--spacing-2-xl) - 2px);
}

.count {
  display: grid;
  align-content: center;
  min-height: var(--input-height);
  font-size: var(--fontsize-heading-xs);
  font-weight: 600;
  margin-left: var(--spacing-s);
}

